Upgrade to arena-7.4.3.129-ga129